reports/multistage.log
Traceback (most recent call last):
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\asyncio\base_events.py", line 587, in run_until_complete
    return future.result()
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\ella metcalfe\anaconda3\envs\py37\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def my_predcorr(f,x,y0):

  n,h=len(x),x[1]-x[0]    #get number of values and step size
  y=np.zeros(len(x))      #form output y array
  y[0]=y0

    for k in range(n-1):
        s1 = f(x[k],y[k])                 %first stage
        s2 = f(x[k]+h/2, y[k]+h/2*s1)     %second stage
        y[k+1]=x[k]+h*s2

    return y
------------------

[1;36m  File [1;32m"<ipython-input-1-c5ab77feef62>"[1;36m, line [1;32m7[0m
[1;33m    for k in range(n-1):[0m
[1;37m    ^[0m
[1;31mIndentationError[0m[1;31m:[0m unexpected indent

IndentationError: unexpected indent (<ipython-input-1-c5ab77feef62>, line 7)

